--- a/apps/lcdr-docs/src/css/custom.css
+++ b/apps/lcdr-docs/src/css/custom.css
@@ -29,12 +29,12 @@ html[data-theme="dark"] {
     --ifm-color-primary-light: #c6c8fb;
     --ifm-color-primary-lighter: #d7e1fd;
     --ifm-color-primary-lightest: #e7edf3;
-    --ifm-code-background: var(--ifm-background-surface-color);
+    --ifm-code-background: var(lcdr-color-primary-darkest);
     --ifm-toc-border-color: #00000e;
 
     --ifm-alert-background-color: #00000e;
 
-    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+    --docusaurus-highlighted-code-line-bg: var(--lcdr-color-primary-darkest);
 }
 
 html[data-theme="light"] {
